Adding jdoc-style comments to analyzer and rearranging file structure. Also including default data

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,6 @@
         }
     ],
     "require": {
-        "guiguiboy/php-cli-progress-bar": "dev-master"
+        "dariuszp/cli-progress-bar": "^1.0"
     }
 }
